[gd_scene load_steps=10 format=2]

[ext_resource path="res://gpic.jpg" type="Texture" id=1]
[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GDh8.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 34
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 90
font_data = ExtResource( 2 )

[node name="Node" type="Node"]
script = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="taust" type="TextureRect" parent="."]
margin_right = 1029.0
margin_bottom = 595.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="nimi" type="RichTextLabel" parent="taust"]
margin_top = 2.0
margin_right = 1026.0
margin_bottom = 92.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]KIVI-PABER-KÄÄRID[center]"
text = "KIVI-PABER-KÄÄRID"
scroll_active = false

[node name="uus_mang" type="Button" parent="taust"]
margin_left = 396.0
margin_top = 83.0
margin_right = 608.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 2 )
text = "UUS MÄNG"

[node name="punktid" type="RichTextLabel" parent="taust"]
margin_left = 1.0
margin_top = 83.0
margin_right = 241.0
margin_bottom = 178.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_editor_description_": ""
}

[node name="punktid2" type="RichTextLabel" parent="taust"]
margin_left = 779.0
margin_top = 83.0
margin_right = 1027.0
margin_bottom = 185.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
scroll_active = false

[node name="tulemus" type="RichTextLabel" parent="taust"]
margin_left = 395.0
margin_top = 139.0
margin_right = 608.0
margin_bottom = 245.0
custom_colors/default_color = Color( 0.345098, 0.321569, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
scroll_active = false

[node name="valik" type="RichTextLabel" parent="taust"]
margin_left = 1.0
margin_top = 282.0
margin_right = 448.0
margin_bottom = 378.0
custom_colors/default_color = Color( 0, 0.133333, 1, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
scroll_active = false

[node name="m_valik" type="RichTextLabel" parent="taust"]
margin_left = 1.0
margin_top = 206.0
margin_right = 502.0
margin_bottom = 291.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]Mängija valik:[/center]"
text = "Mängija valik:"
scroll_active = false

[node name="valik2" type="RichTextLabel" parent="taust"]
margin_left = 509.0
margin_top = 282.0
margin_right = 1026.0
margin_bottom = 380.0
custom_colors/default_color = Color( 1, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
scroll_active = false

[node name="a_valik" type="RichTextLabel" parent="taust"]
margin_left = 547.0
margin_top = 207.0
margin_right = 1028.0
margin_bottom = 299.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]Arvuti valik:[/center]"
text = "Arvuti valik:"
scroll_active = false

[node name="voitja" type="RichTextLabel" parent="taust"]
margin_left = 1.0
margin_top = 358.0
margin_right = 1028.0
margin_bottom = 499.0
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true

[node name="kivi" type="Button" parent="taust"]
margin_left = 21.0
margin_top = 501.0
margin_right = 233.0
margin_bottom = 557.0
custom_fonts/font = SubResource( 2 )
text = "KIVI"

[node name="paber" type="Button" parent="taust"]
margin_left = 239.0
margin_top = 501.0
margin_right = 451.0
margin_bottom = 557.0
custom_fonts/font = SubResource( 2 )
text = "PABER"

[node name="kaarid" type="Button" parent="taust"]
margin_left = 457.0
margin_top = 500.0
margin_right = 669.0
margin_bottom = 556.0
custom_fonts/font = SubResource( 2 )
text = "KÄÄRID"

[connection signal="pressed" from="taust/uus_mang" to="." method="_on_uus_mang_pressed"]
[connection signal="pressed" from="taust/kivi" to="." method="_on_kivi_pressed"]
[connection signal="pressed" from="taust/paber" to="." method="_on_paber_pressed"]
[connection signal="pressed" from="taust/kaarid" to="." method="_on_kaarid_pressed"]
